@@ -34,6 +34,8 @@ Changes since version 1.6-6
                         * calculations now done without car::linearHypothesis().
   * print.pseries: prettier printing for integers.
   * diff.pseries: logicals can now be diff'ed (result is integer, mimics base::diff).
+  * punbalancedness: extended to calculate unbalancedness measures of nested panel 
+                     structures as in Baltagi/Song/Jung (2001).
 
 
 Changes since version 1.6-5
